# redes-trab1

./: .gitignore  Justfile  README.md  meson.build
libs/: md5.c  meson.build
src/: client.c  meson.build  select.c  server.c  shared.c  shared.h  simple.c  thread.c  thread_queue.c  vrg.h
subprojects/: sds.wrap
